[package]
description = "Suzaku is a dynamic, real-time, high-performance, Cloud-Native API Gateway"
name = "suzaku"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/baerwang/Suzaku"
publish = false

[profile.release]
debug = false
strip = true

[profile.release-prod]
inherits = "release"
codegen-units = 1
lto = "thin"

[profile.release-profiling]
inherits = "release"
debug = true
strip = false
codegen-units = 4

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
clap = { version = "4.4.18", default-features = false, features = [
    "std",
    "help",
    "usage",
    "suggestions",
    "cargo",
    "derive",
    "string"
] }
log = "0.4.20"